minor spacing fixes & responsive consistency

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -183,7 +183,7 @@ section {
 
   header {
     width: 90%;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 0px;
   }
 
@@ -199,10 +199,6 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-
-  .main {
-    margin-left: 20px;
   }
 
   .desktop {
@@ -242,9 +238,9 @@ section {
     margin-bottom: 50px;
   }
 
- .main {
-   margin-left: 20px;
- }
+  #splash_header {
+    margin-left: 20px;
+  }
 
  .desktop {
     display: flex;
